經validator檢查後一些修改

--- a/register.html
+++ b/register.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<style>
-		form {
-			font-size: 20px;
-		}
-	</style>	
+		<title>註冊</title>
+		<meta charset="UTF-8">
+		<style>
+			form {
+				font-size: 20px;
+			}
+		</style>	
 	</head>
 	<body>
 		<form>
@@ -31,4 +33,4 @@
 									<input type="reset" value="重設">
 		</form>
 	</body>
-<html>
+</html>
