--- a/timetable.html
+++ b/timetable.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<!--課表-->
-	<style>
-		table, th, td {
-			border: 2px solid black;
-			border-collapse: collapse;
-			table-layout: fixed;
-			word-wrap: break-word;
-			width: 105px;
-			height: 60px;
-
-		}
-		th, td {
-			padding: 5px;
-			text-align: center;
-		}
-		table {
-			background-color: #E1FBFF;
-		}
-		th {
-			background-color: #B3EBFF;
-		}
-		.color_bg {
-			background-color: #FFF7C0;
-		}
-	</style>
+		<title>我的課表</title>
+		<meta charset="UTF-8">
+		<style>
+			table, th, td {
+				border: 2px solid black;
+				border-collapse: collapse;
+				table-layout: fixed;
+				word-wrap: break-word;
+				width: 105px;
+				height: 60px;
+			}
+			th, td {
+				padding: 5px;
+				text-align: center;
+			}
+			table {
+				background-color: #E1FBFF;
+			}
+			th {
+				background-color: #B3EBFF;
+			}
+			.color_bg {
+				background-color: #FFF7C0;
+			}
+		</style>
 	</head>
 	<body>
 		
@@ -184,4 +184,4 @@
 			
 		</table>
 	</body>
-<html>
+</html>
